--- a/src/css/style.css
+++ b/src/css/style.css
@@ -85,7 +85,7 @@ header {
   margin-top: -1.3em;
 }
 
-.logo--square > div {
+.logo--square>div {
   margin-top: -1.7em;
 }
 
@@ -160,7 +160,7 @@ button {
   padding-left: 0;
 }
 
-.product-grid > li {
+.product-grid>li {
   width: 150px;
   /* border: 1px solid var(--light-grey); */
   padding: 0.5em;
@@ -211,22 +211,39 @@ button {
   color: var(--dark-grey);
 }
 
+.list-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.controls {
+  background-color: #d0d0d0;
+  border: solid 1px;
+
+  width: 8rem;
+  height: 2rem;
+}
+
 .list-total {
   text-align: right;
 }
+
 .list-footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 0.5em;
 }
-.list-footer > a {
+
+.list-footer>a {
   /* display: block; */
   padding: 0.3em 0.5em;
   background-color: var(--primary-color);
   text-decoration: none;
   border-radius: 5px;
 }
+
 .list-footer a:link,
 .list-footer a:visited {
   color: var(--dark-grey);
@@ -236,23 +253,27 @@ button {
 .checkout-form {
   padding: 0.5em;
 }
+
 .checkout-form label {
   display: block;
 }
+
 .checkout-form input {
   width: 100%;
   font-size: 1.2em;
 }
 
-.checkout-summary > ul {
+.checkout-summary>ul {
   padding-left: 0;
   list-style-type: none;
 }
+
 .checkout-summary li {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .checkout-summary input {
   width: 25%;
   font-size: 1em;
