--- a/src/css/style.css
+++ b/src/css/style.css
@@ -427,3 +427,16 @@ marquee {
   font-size: 1em;
   border-radius: 5px;
 }
+
+/* alert styles */
+.alert {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5em;
+  background-color: var(--primary-color);
+  border: 1px solid darkorange;
+}
+.alert > p {
+  margin: 0;
+}
